--- a/upms-web/src/view/login/login.less
+++ b/upms-web/src/view/login/login.less
@@ -23,7 +23,7 @@
         .login-tip{
             font-size: 10px;
             text-align: center;
-            color: #c3c3c3;
+            color: #ed4014;
         }
     }
 }
